# Discrete-Galois-Transform

./: dgt.py  galois.py  gaussian.py  simple_mul.py  test.py
CUDA/: CMakeLists.txt
CUDA/include/dgt/: dgt.h
CUDA/src/: dgt_cuda.cu
CUDA/src/samples/: simple_add.cu  simple_dgt.cu  simple_mul.cu
CUDA/src/tests/: benchmark.cu  test.cu
